remove redundant APIs to upload pcap files
